--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<div id="featured">
 			<div class="container">
 				<header>
-					<h2>Welcome to my Website</h2>
+					<h2>Welcome to AgnesElza's Website</h2>
 				</header>
 				
 				</div>
